--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@ h3 {
     <a href="https://kauevestena.github.io/opensidewalkmap/" class="active">
     click to get back to OSWM index map
     </a>
-    <!-- <a href="https://kauevestena.github.io/opensidewalkmap/" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a> -->
+
   </div>
   
   
@@ -377,7 +375,9 @@ h3 {
 <p> 
     <span style="background-color: #797979d7; font-size: smaller;">
 
-        <a href="https://kauevestena.github.io/opensidewalkmap_beta/data/data_updating.html" style="color: rgb(243, 243, 172);">(You can check their updating status and download data here)</a> 
+        <a href=
+        "https://kauevestena.github.io/opensidewalkmap_beta/data/data_updating.html"
+        style="color: rgb(243, 243, 172);">(You can check their updating status and download data here)</a> 
     </span>
 
 </p>
@@ -458,7 +458,7 @@ pedestrians
 </p>
 
 <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/kauevestena/opensidewalkmap_beta/" data-color-scheme="no-preference: dark_dimmed; light: dark_dimmed; dark: dark_dimmed;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star kauevestena/opensidewalkmap_beta/ on GitHub">Star</a>
+<a class="github-button" href="https://github.com/kauevestena/opensidewalkmap" data-color-scheme="no-preference: dark_dimmed; light: dark_dimmed; dark: dark_dimmed;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star kauevestena/opensidewalkmap on GitHub">Star</a>
 
 <!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/kauevestena" data-color-scheme="no-preference: dark_dimmed; light: dark_dimmed; dark: dark_dimmed;" data-size="large" data-show-count="false" aria-label="Follow @kauevestena on GitHub">Follow @kauevestena</a>
