prior to final chart generation

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ h3 {
 
 <!-- TOPBAR, THX W3 SCHOOLS, AGAIN -->
 
-<div class="topnav" id="myTopnav">
+<div class="topnav" id="stTopnav">
     <a href="https://kauevestena.github.io/opensidewalkmap/" class="active">
     click to get back to OSWM index map
     </a>
@@ -231,7 +231,7 @@ h3 {
   
   <!-- <script>
   function myFunction() {
-    var x = document.getElementById("myTopnav");
+    var x = document.getElementById("stTopnav");
     if (x.className === "topnav") {
       x.className += " responsive";
     } else {
