--- a/statistics/sidewalks/sample_chart.html
+++ b/statistics/sidewalks/sample_chart.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
   <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.8.0"></script>
@@ -15,9 +17,9 @@
 
 
  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 
- <div class="topnav" id="myTopnav">
+ <div class="topnav" id="stTopnav">
    <a href="#home" class="active">Home</a>
    <a href="#news">News</a>
    <a href="#contact">Contact</a>
@@ -28,7 +30,6 @@
  </div> 
 
  <div class="sidebar">
-  <a class="active" href="#home">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
