--- a/quality_check/pages/invalid_characters_kerbs.html
+++ b/quality_check/pages/invalid_characters_kerbs.html
@@ -13,13 +13,13 @@
 
 <style>
 
-        body {
-                font-family: 'Poppins', sans-serif;
-                    font-size: 20px;
-                    text-align: center;
-                    color: black;
+    body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    color: black;
 
-            }
+}
 
 </style>
 
@@ -30,26 +30,25 @@
         
 
 <style>
-
-
-h1 {text-align: center;}
-
-
+    h1 {
+    text-align: center;
+}
 
 table {
     font-size: 15px;
-  border-collapse: collapse;
-  width: 100%;
+    border-collapse: collapse;
+    width: 100%;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+    background-color: #dddddd;
 }
 </style>
 
@@ -79,6 +78,8 @@ tr:nth-child(even) {
     <th><b>value</b></th>
     <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>ANY (check at feature link)</td><td>lowered=no</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1070027466>1070027466</a></td><td>ANY (check at feature link)</td><td>barrier=kerb</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1070027467>1070027467</a></td><td>ANY (check at feature link)</td><td>barrier=kerb</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
 
 
         </table>
