--- a/quality_check/pages/replaceable_values_crossings.html
+++ b/quality_check/pages/replaceable_values_crossings.html
@@ -13,13 +13,13 @@
 
 <style>
 
-        body {
-                font-family: 'Poppins', sans-serif;
-                    font-size: 20px;
-                    text-align: center;
-                    color: black;
+    body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    color: black;
 
-            }
+}
 
 </style>
 
@@ -30,26 +30,25 @@
         
 
 <style>
-
-
-h1 {text-align: center;}
-
-
+    h1 {
+    text-align: center;
+}
 
 table {
     font-size: 15px;
-  border-collapse: collapse;
-  width: 100%;
+    border-collapse: collapse;
+    width: 100%;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+    background-color: #dddddd;
 }
 </style>
 
@@ -78,11 +77,13 @@ tr:nth-child(even) {
     <th><b>key</b></th>
     <th><b>value</b></th>
     <th><b>commentary</b></th>
-    </tr><tr><td><a href=https://www.openstreetmap.org/way/24576715>24576715</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
+    </tr><tr><td><a href=https://www.openstreetmap.org/way/2394975296>2394975296</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/24576715>24576715</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/24775977>24775977</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/82637218>82637218</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/106805350>106805350</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/106810173>106810173</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/106928168>106928168</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/164011422>164011422</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/229502085>229502085</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/229847988>229847988</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
@@ -91,6 +92,7 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/way/230003157>230003157</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/230003602>230003602</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/231092796>231092796</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/262609532>262609532</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/344010637>344010637</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/473856869>473856869</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/488431774>488431774</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
@@ -104,7 +106,6 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/way/524286161>524286161</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/553765471>553765471</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/554566852>554566852</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/554566853>554566853</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/618035749>618035749</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/629324551>629324551</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/635818434>635818434</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
@@ -173,7 +174,7 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/way/659237708>659237708</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/659237709>659237709</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/659237714>659237714</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/659241105>659241105</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/659241105>659241105</a></td><td>crossing</td><td>zebra</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/659435710>659435710</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/659435720>659435720</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/659435724>659435724</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
@@ -270,7 +271,6 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/way/724738047>724738047</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/727640922>727640922</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/729117716>729117716</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/730964752>730964752</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/730964753>730964753</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/734816736>734816736</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/738984495>738984495</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
@@ -298,8 +298,6 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/way/886184893>886184893</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/948322146>948322146</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/948322151>948322151</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/953137282>953137282</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/953137283>953137283</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/953195825>953195825</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/953195827>953195827</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/953195829>953195829</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
@@ -385,6 +383,17 @@ tr:nth-child(even) {
 <tr><td><a href=https://www.openstreetmap.org/way/1070687545>1070687545</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/1070687547>1070687547</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/way/1074628716>1074628716</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1097986246>1097986246</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1098004733>1098004733</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1098004734>1098004734</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1101617465>1101617465</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1101617467>1101617467</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1109912046>1109912046</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1109912047>1109912047</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1109912048>1109912048</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1109912055>1109912055</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1112384092>1112384092</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1112384093>1112384093</a></td><td>crossing</td><td>marked</td><td>uncontrolled</td></tr>
 
 
         </table>
