title at charts

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ h3 {
     
 </style>
 
-<title>OpenSidewalkMap Node Home</title>
+<title>OSWM Node Home</title>
 
 <link rel="icon" type="image/x-icon" href="oswm_codebase/assets/homepage/favicon_homepage.png">
 
@@ -326,7 +326,7 @@ h3 {
     <div class="media">
 
 
-    <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">
+    <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/index.html">
         
         <img title="OSWM dashboard" 
         src="oswm_codebase/assets/homepage/oswm_statistics_img.png" 
