--- a/statistics/crossings/crossings_smoothness_x_surface.html
+++ b/statistics/crossings/crossings_smoothness_x_surface.html
@@ -39,6 +39,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
+    <title>OSWM Dashboard</title>
+
+    
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.8.0"></script>
