switching for absolute refs for assests part 1

--- a/statistics/crossings/crossings_number_revisions.html
+++ b/statistics/crossings/crossings_number_revisions.html
@@ -34,8 +34,8 @@
 
 
 
-    <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
-    <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
+    <link rel="stylesheet" href="https://kauevestena.github.io/oswm_codebase/assets/styles/stats_styles.css">
+    <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
@@ -51,7 +51,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-7e72eb48227b5ebb59fdc3606713f009"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs type", "sort": "-x", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_13", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year and Month Of Update (crossings)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-7e72eb48227b5ebb59fdc3606713f009": [{"n_revs type": 1, "count": 1159, "percent": "72.12%"}, {"n_revs type": 3, "count": 257, "percent": "15.99%"}, {"n_revs type": 2, "count": 83, "percent": "5.16%"}, {"n_revs type": 4, "count": 78, "percent": "4.85%"}, {"n_revs type": 5, "count": 19, "percent": "1.18%"}, {"n_revs type": 6, "count": 10, "percent": "0.62%"}, {"n_revs type": 13, "count": 1, "percent": "0.06%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-f437a28009848e70bb6e6302c4768704"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs type", "sort": "-x", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_13", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year and Month Of Update (crossings)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-f437a28009848e70bb6e6302c4768704": [{"n_revs type": 1, "count": 1160, "percent": "69.71%"}, {"n_revs type": 3, "count": 248, "percent": "14.9%"}, {"n_revs type": 2, "count": 109, "percent": "6.55%"}, {"n_revs type": 4, "count": 97, "percent": "5.83%"}, {"n_revs type": 5, "count": 26, "percent": "1.56%"}, {"n_revs type": 6, "count": 13, "percent": "0.78%"}, {"n_revs type": 7, "count": 6, "percent": "0.36%"}, {"n_revs type": 8, "count": 2, "percent": "0.12%"}, {"n_revs type": 13, "count": 1, "percent": "0.06%"}, {"n_revs type": 9, "count": 1, "percent": "0.06%"}, {"n_revs type": 10, "count": 1, "percent": "0.06%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
