--- a/statistics/kerbs/kerbs_survey_year.html
+++ b/statistics/kerbs/kerbs_survey_year.html
@@ -38,8 +38,8 @@
 
 
 
-    <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
-    <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
+    <link rel="stylesheet" href="https://kauevestena.github.io/oswm_codebase/assets/styles/stats_styles.css">
+    <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
@@ -55,7 +55,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-5730b0352309f115c8124787c6246e4a"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "Year of Survey type", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_15", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year of Survey Image (kerbs)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-5730b0352309f115c8124787c6246e4a": [{"Year of Survey type": "?", "count": 2239, "percent": "96.05%"}, {"Year of Survey type": "2019", "count": 64, "percent": "2.75%"}, {"Year of Survey type": "2020", "count": 25, "percent": "1.07%"}, {"Year of Survey type": "2021", "count": 3, "percent": "0.13%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-4fe17b564ed10db40a75d74918b7bfb7"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "Year of Survey type", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_15", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year of Survey Image (kerbs)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-4fe17b564ed10db40a75d74918b7bfb7": [{"Year of Survey type": "?", "count": 2382, "percent": "96.36%"}, {"Year of Survey type": "2019", "count": 62, "percent": "2.51%"}, {"Year of Survey type": "2020", "count": 25, "percent": "1.01%"}, {"Year of Survey type": "2021", "count": 3, "percent": "0.12%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
