--- a/statistics/sidewalks/sidewalks_survey_year.html
+++ b/statistics/sidewalks/sidewalks_survey_year.html
@@ -30,8 +30,8 @@
 
 
 
-    <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
-    <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
+    <link rel="stylesheet" href="https://kauevestena.github.io/oswm_codebase/assets/styles/stats_styles.css">
+    <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
@@ -47,7 +47,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-a176a4a7a66be4944e096fbef197a319"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "Year of Survey type", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_7", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year of Survey Image (sidewalks)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-a176a4a7a66be4944e096fbef197a319": [{"Year of Survey type": "?", "count": 6763, "percent": "87.13%"}, {"Year of Survey type": "2020", "count": 684, "percent": "8.81%"}, {"Year of Survey type": "2019", "count": 284, "percent": "3.66%"}, {"Year of Survey type": "2021", "count": 31, "percent": "0.4%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-62c4f084cb4fdab2759542239dd6a6d1"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "Year of Survey type", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_7", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year of Survey Image (sidewalks)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-62c4f084cb4fdab2759542239dd6a6d1": [{"Year of Survey type": "?", "count": 6893, "percent": "87.83%"}, {"Year of Survey type": "2020", "count": 660, "percent": "8.41%"}, {"Year of Survey type": "2019", "count": 269, "percent": "3.43%"}, {"Year of Survey type": "2021", "count": 26, "percent": "0.33%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
