--- a/statistics/sidewalks/sidewalks_width.html
+++ b/statistics/sidewalks/sidewalks_width.html
@@ -30,8 +30,8 @@
 
 
 
-    <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
-    <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
+    <link rel="stylesheet" href="https://kauevestena.github.io/oswm_codebase/assets/styles/stats_styles.css">
+    <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
@@ -47,7 +47,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-deedaed0c490ff255dbd3fa4dac5c559"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": {"field": "length(km)", "type": "quantitative"}, "x": {"field": "tactile_paving type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_5", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Width Values", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-deedaed0c490ff255dbd3fa4dac5c559": [{"tactile_paving type": "?", "feature count": 6682, "length(km)": 254.95338706382927}, {"tactile_paving type": "no", "feature count": 1069, "length(km)": 31.750998571677524}, {"tactile_paving type": "yes", "feature count": 11, "length(km)": 0.3342733270694504}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-679d195346a6544f0ff139c404eae43f"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": {"field": "length(km)", "type": "quantitative"}, "x": {"field": "tactile_paving type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_5", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Width Values", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-679d195346a6544f0ff139c404eae43f": [{"tactile_paving type": "?", "feature count": 6793, "length(km)": 261.2996130486061}, {"tactile_paving type": "no", "feature count": 1044, "length(km)": 31.463766234666206}, {"tactile_paving type": "yes", "feature count": 11, "length(km)": 0.3342733270694504}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
