--- a/statistics/crossings/crossings_survey_year.html
+++ b/statistics/crossings/crossings_survey_year.html
@@ -34,8 +34,8 @@
 
 
 
-    <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
-    <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
+    <link rel="stylesheet" href="https://kauevestena.github.io/oswm_codebase/assets/styles/stats_styles.css">
+    <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
@@ -51,7 +51,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-319e8fd2a40444defdc2124e77ad7648"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "Year of Survey type", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_11", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year of Survey Image (crossings)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-319e8fd2a40444defdc2124e77ad7648": [{"Year of Survey type": "?", "count": 1581, "percent": "98.38%"}, {"Year of Survey type": "2019", "count": 26, "percent": "1.62%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-e6aeea535ea429c24077f84cb7895aac"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "Year of Survey type", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_11", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year of Survey Image (crossings)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-e6aeea535ea429c24077f84cb7895aac": [{"Year of Survey type": "?", "count": 1635, "percent": "98.26%"}, {"Year of Survey type": "2019", "count": 28, "percent": "1.68%"}, {"Year of Survey type": "2020", "count": 1, "percent": "0.06%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
