--- a/statistics/kerbs/kerbs_number_revisions.html
+++ b/statistics/kerbs/kerbs_number_revisions.html
@@ -38,8 +38,8 @@
 
 
 
-    <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
-    <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
+    <link rel="stylesheet" href="https://kauevestena.github.io/oswm_codebase/assets/styles/stats_styles.css">
+    <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
@@ -55,7 +55,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-2f8a20c5a32e2e0b9d251f00b2a9e0c6"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs type", "sort": "-x", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_17", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year and Month Of Update (Kerbs)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-2f8a20c5a32e2e0b9d251f00b2a9e0c6": [{"n_revs type": 1, "count": 1820, "percent": "78.08%"}, {"n_revs type": 2, "count": 218, "percent": "9.35%"}, {"n_revs type": 3, "count": 127, "percent": "5.45%"}, {"n_revs type": 4, "count": 89, "percent": "3.82%"}, {"n_revs type": 5, "count": 34, "percent": "1.46%"}, {"n_revs type": 6, "count": 21, "percent": "0.9%"}, {"n_revs type": 7, "count": 16, "percent": "0.69%"}, {"n_revs type": 8, "count": 1, "percent": "0.04%"}, {"n_revs type": 11, "count": 1, "percent": "0.04%"}, {"n_revs type": 16, "count": 1, "percent": "0.04%"}, {"n_revs type": 23, "count": 1, "percent": "0.04%"}, {"n_revs type": 17, "count": 1, "percent": "0.04%"}, {"n_revs type": 15, "count": 1, "percent": "0.04%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-1880a4f6e5d3d48d04f52199e855e037"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs type", "sort": "-x", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_17", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year and Month Of Update (Kerbs)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-1880a4f6e5d3d48d04f52199e855e037": [{"n_revs type": 1, "count": 1870, "percent": "75.65%"}, {"n_revs type": 2, "count": 283, "percent": "11.45%"}, {"n_revs type": 3, "count": 138, "percent": "5.58%"}, {"n_revs type": 4, "count": 103, "percent": "4.17%"}, {"n_revs type": 5, "count": 29, "percent": "1.17%"}, {"n_revs type": 6, "count": 27, "percent": "1.09%"}, {"n_revs type": 7, "count": 16, "percent": "0.65%"}, {"n_revs type": 11, "count": 2, "percent": "0.08%"}, {"n_revs type": 8, "count": 1, "percent": "0.04%"}, {"n_revs type": 19, "count": 1, "percent": "0.04%"}, {"n_revs type": 21, "count": 1, "percent": "0.04%"}, {"n_revs type": 29, "count": 1, "percent": "0.04%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
