--- a/statistics/sidewalks/sidewalks_smoothness.html
+++ b/statistics/sidewalks/sidewalks_smoothness.html
@@ -30,8 +30,8 @@
 
 
 
-    <link rel="stylesheet" href="../../oswm_codebase/assets/styles/stats_styles.css">
-    <script src="../../oswm_codebase/assets/webscripts/stats_funcs.js"></script>
+    <link rel="stylesheet" href="https://kauevestena.github.io/oswm_codebase/assets/styles/stats_styles.css">
+    <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
@@ -47,7 +47,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-9cc2111661b6ef9ed0fa1780f46d25dc"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": {"field": "length(km)", "type": "quantitative"}, "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_3", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Smoothness Condition", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-9cc2111661b6ef9ed0fa1780f46d25dc": [{"smoothness type": "?", "feature count": 6573, "length(km)": 250.68409987254645}, {"smoothness type": "bad", "feature count": 193, "length(km)": 4.688843528927151}, {"smoothness type": "excellent", "feature count": 120, "length(km)": 4.6097502157252555}, {"smoothness type": "good", "feature count": 492, "length(km)": 16.13526659175111}, {"smoothness type": "horrible", "feature count": 4, "length(km)": 0.0826631821806614}, {"smoothness type": "impassable", "feature count": 4, "length(km)": 0.11098495976963954}, {"smoothness type": "intermediate", "feature count": 352, "length(km)": 9.927933198113841}, {"smoothness type": "very_bad", "feature count": 18, "length(km)": 0.5631161308690301}, {"smoothness type": "very_horrible", "feature count": 6, "length(km)": 0.23600128269308998}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-a8e35699a5f1d65a435a88c716c8a0e7"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": {"field": "length(km)", "type": "quantitative"}, "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_3", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Smoothness Condition", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-a8e35699a5f1d65a435a88c716c8a0e7": [{"smoothness type": "?", "feature count": 6599, "length(km)": 255.1180302478629}, {"smoothness type": "bad", "feature count": 209, "length(km)": 4.973245791128946}, {"smoothness type": "excellent", "feature count": 126, "length(km)": 4.888132006713678}, {"smoothness type": "good", "feature count": 506, "length(km)": 16.484346626430682}, {"smoothness type": "horrible", "feature count": 4, "length(km)": 0.0826631821806614}, {"smoothness type": "impassable", "feature count": 5, "length(km)": 0.1968176769588549}, {"smoothness type": "intermediate", "feature count": 375, "length(km)": 10.554783848497681}, {"smoothness type": "very_bad", "feature count": 18, "length(km)": 0.5631161308690301}, {"smoothness type": "very_horrible", "feature count": 6, "length(km)": 0.236517099699315}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
