Hello, parquet!!! And Submodule

--- a/data/data_updating.html
+++ b/data/data_updating.html
@@ -64,7 +64,7 @@ if the data is too outdated you may <a href="https://github.com/kauevestena/open
 <table>
 
 
-        <tr><th><b>Data Fetching</b></th><th>10/01/2024 14:53:48</th></tr>
+        <tr><th><b>Data Fetching</b></th><th>10/01/2024 17:47:14</th></tr>
         
         <tr><th><b>Data Pre-Processing</b></th><th>08/01/2024 18:21:33</th></tr>
         
@@ -88,22 +88,22 @@ if the data is too outdated you may <a href="https://github.com/kauevestena/open
 
 <tr>
   <th>Sidewalks</th>
-  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks_raw.geojson">Raw</a></th>
-  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks.geojson">Filtered</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks_raw.parquet">Raw</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks.parquet">Filtered</a></th>
   <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks_versioning.json">Versioning</a></th>
 </tr>
 
 <tr>
   <th>Crossings</th>
-  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings_raw.geojson">Raw</a></th>
-  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings.geojson">Filtered</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings_raw.parquet">Raw</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings.parquet">Filtered</a></th>
   <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings_versioning.json">Versioning</a></th>
 </tr>
 
 <tr>
   <th>Kerbs</th>
-  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs_raw.geojson">Raw</a></th>
-  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs.geojson">Filtered</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs_raw.parquet">Raw</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs.parquet">Filtered</a></th>
   <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs_versioning.json">Versioning</a></th>
 </tr>
 
