--- a/statistics/sidewalks/sidewalks_smoothness.html
+++ b/statistics/sidewalks/sidewalks_smoothness.html
@@ -10,6 +10,7 @@
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_smoothness_x_surface.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_smoothness_x_surface.html">Other_footways Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -37,14 +38,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.15.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-a4b89b1f8fd1bf05bf33069603424459"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": {"field": "length(km)", "type": "quantitative"}, "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_3", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Smoothness Condition", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.15.1.json", "datasets": {"data-a4b89b1f8fd1bf05bf33069603424459": [{"smoothness type": "?", "feature count": 6623, "length(km)": 263.53247217546283}, {"smoothness type": "bad", "feature count": 193, "length(km)": 4.69517016672028}, {"smoothness type": "excellent", "feature count": 132, "length(km)": 5.4989701322627536}, {"smoothness type": "good", "feature count": 499, "length(km)": 16.884746192277163}, {"smoothness type": "horrible", "feature count": 4, "length(km)": 0.0826631821806614}, {"smoothness type": "impassable", "feature count": 4, "length(km)": 0.13028396605245757}, {"smoothness type": "intermediate", "feature count": 350, "length(km)": 10.165872966163748}, {"smoothness type": "very_bad", "feature count": 18, "length(km)": 0.5631161308690301}, {"smoothness type": "very_horrible", "feature count": 6, "length(km)": 0.236517099699315}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-1e39b27502b5b42d653c3b26b61c9935"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": {"field": "length(km)", "type": "quantitative"}, "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_3", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Smoothness Condition", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-1e39b27502b5b42d653c3b26b61c9935": [{"smoothness type": "bad", "feature count": 202, "length(km)": 4.8883051070644274}, {"smoothness type": "excellent", "feature count": 125, "length(km)": 4.618268937303478}, {"smoothness type": "good", "feature count": 532, "length(km)": 17.62979246603865}, {"smoothness type": "horrible", "feature count": 4, "length(km)": 0.0826631821806614}, {"smoothness type": "impassable", "feature count": 4, "length(km)": 0.13028396605245757}, {"smoothness type": "intermediate", "feature count": 391, "length(km)": 11.186277272551479}, {"smoothness type": "very_bad", "feature count": 20, "length(km)": 0.6059131830369366}, {"smoothness type": "very_horrible", "feature count": 6, "length(km)": 0.236517099699315}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
